--- a/src/index.less
+++ b/src/index.less
@@ -16,8 +16,11 @@ code {
     monospace;
 }
 #root {
-  width: 2048px;
-  height: 1152px;
+  // width: 2048px;
+  // height: 1152px;
+
+  width: 2304px;
+  height: 1270px;
   margin: 0 auto;
   background-color: pink;
 }
