--- a/src/components/SideBar/SideBar.less
+++ b/src/components/SideBar/SideBar.less
@@ -8,24 +8,27 @@
     height: 100% !important;
   }
 }
+
 .select-dataset {
   width: 100%;
-
-  // background-color: blue;
+  margin: 0px 0px 40px 0px;
+  p {
+    width: 100%;
+    height: 24px;
+    line-height: 24px;
+    text-align: center;
+    margin: 10px 0;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .ant-select {
+    height: 50px;
+    width: 100%;
+  }
 }
-.select-dataset p {
-  width: 100%;
-  height: 24px;
-  line-height: 24px;
-  text-align: center;
-  margin: 10px 0;
-  font-size: 24px;
-  font-weight: 400;
+.search-partition, .search-ip {
+  margin: 80px 0;
 }
-.select-dataset .ant-select {
-  height: 40px;
-  width: 100%;
-}
-.select-dataset, .search-partition, .search-ip {
-  margin: 40px 0;
+.distribution {
+  margin: 80px 0;
 }
