--- a/src/index.less
+++ b/src/index.less
@@ -3,7 +3,6 @@
   padding: 0;
 }
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,15 +15,11 @@ code {
     monospace;
 }
 #root {
-  // width: 2048px;
-  // height: 1152px;
-
   width: 2304px;
   height: 1270px;
   margin: 0 auto;
-  background-color: pink;
 }
-.app, .view{
+.app{
   width: 100%;
   height: 100%;
 }
